Archive2/56/27bf9af6eeb811/output
main.cpp:53:9: error: use of undeclared identifier 'random_variables'
        random_variables[i] = normal_rand(params); // on génère un tableau de X et on les affiche au fur et à mesure. Ces nombres aléatoires suivent la loi normale.
        ^
main.cpp:54:26: error: use of undeclared identifier 'random_variables'
        printf("%0.5f\n",random_variables[i]);
                         ^
2 errors generated.
